--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <h3> Under construction </h3>
 <h3> Come back later to see more changes. </h3>
-
+<a href = "superdino1.github.io/aboutMe.html"> About me </a>
 </body>
 </html>
