Updated the website
Used Current Website to launch a birthday project

--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title> Dino's Website | Main </title>
-</head>
+  <head>
+    <title>Happy Birthday Alexis!</title>
+    <meta name="description" content="Happy Birthday Alexis!">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/small.css" media="(max-width:630px)">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700|Lobster' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
 
-<body>
-<h3> Under construction </h3>
-<h3> Come back later to see more changes. </h3>
-<a href = "superdino1.github.io/aboutMe.html"> About me </a>
-</body>
-</html>
+    <section class="container">
+       <aside class= "hero">
+        <img src = "images/hero-image.png">
+       </aside>
+
+    <section class = "part1">
+        <h2>Alexis's Birthday Party!</h2>
+
+        <aside class="right"><img src = "images/bubble-bottle.png">
+        </aside>
+
+        <p>Alexis' birthday is coming up! We hope you intend to come to our magical party for a most lovely friend. There will be 99 bottles of wine, a dozen in attendance, and if we're lucky, Dr. Bubbles (in special appearance)!</p>
+        <p>You know when to go out, you know when to stay in. Come to Schiller's this Thursday, and</p>
+    </section>
+
+    <section class = "part2">
+         <h2>Thursday, November 12th!</h2>
+
+         <aside class="left"><img src = "images/unicorn.png">
+         </aside>
+
+         <p>Starts promptly at <time>20:00</time></p>
+         <p>Schiller's Liquor Bar!<br>
+131 Rivington St<br>
+             New York, NY 10002
+        </p>
+
+      </section>
+      <p>Coming? Email
+
+         <a href="mailto: yes@happybirthdaydude.lol? Subject = YES I AM COMING" >yes@happybirthdaydude.lol</a></p>
+
+    <section>
+    <div class = "googlemap">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13235.595516024638!2d-83.3735862!3d33.969438499999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x243dc245deb1ea48!2sThe+Lodge+of+Athens!5e0!3m2!1szh-CN!2sus!4v1486912529902" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+
+    </section>
+   </body>
+ </html>
