--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     <section class="container">
        <aside class= "hero">
-        <img src = "images/hero-image.png">
+        <img src = ".git/brithdayprojectimages/hero-image.png">
        </aside>
 
     <section class = "part1">
         <h2>Alexis's Birthday Party!</h2>
 
-        <aside class="right"><img src = "images/bubble-bottle.png">
+        <aside class="right"><img src = ".git/brithdayproject/images/bubble-bottle.png">
         </aside>
 
         <p>Alexis' birthday is coming up! We hope you intend to come to our magical party for a most lovely friend. There will be 99 bottles of wine, a dozen in attendance, and if we're lucky, Dr. Bubbles (in special appearance)!</p>
@@ -29,7 +29,7 @@
     <section class = "part2">
          <h2>Thursday, November 12th!</h2>
 
-         <aside class="left"><img src = "images/unicorn.png">
+         <aside class="left"><img src = ".git/brithdayproject/images/unicorn.png">
          </aside>
 
          <p>Starts promptly at <time>20:00</time></p>
