--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Happy Birthday Alexis!</title>
     <meta name="description" content="Happy Birthday Alexis!">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/small.css" media="(max-width:630px)">
+    <link rel="stylesheet" href=".git/brithdayproject/css/reset.css">
+    <link rel="stylesheet" href=".git/brithdayproject/css/style.css">
+    <link rel="stylesheet" href=".git/brithdayproject/css/small.css" media="(max-width:630px)">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700|Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
