--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Happy Birthday Alexis!</title>
     <meta name="description" content="Happy Birthday Alexis!">
-    <link rel="stylesheet" href=".git/css/reset.css">
-    <link rel="stylesheet" href=".git/css/style.css">
-    <link rel="stylesheet" href=".git/css/small.css" media="(max-width:630px)">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/small.css" media="(max-width:630px)">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700|Lobster' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -13,13 +13,13 @@
 
     <section class="container">
        <aside class= "hero">
-        <img src = ".git/images/hero-image.png">
+        <img src = "images/hero-image.png">
        </aside>
 
     <section class = "part1">
         <h2>Alexis's Birthday Party!</h2>
 
-        <aside class="right"><img src = ".git/images/bubble-bottle.png">
+        <aside class="right"><img src = "images/bubble-bottle.png">
         </aside>
 
         <p>Alexis' birthday is coming up! We hope you intend to come to our magical party for a most lovely friend. There will be 99 bottles of wine, a dozen in attendance, and if we're lucky, Dr. Bubbles (in special appearance)!</p>
@@ -29,7 +29,7 @@
     <section class = "part2">
          <h2>Thursday, November 12th!</h2>
 
-         <aside class="left"><img src = ".git/images/unicorn.png">
+         <aside class="left"><img src = "images/unicorn.png">
          </aside>
 
          <p>Starts promptly at <time>20:00</time></p>
