add another page
create another page to work  on
for the next html or reactJS project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </section>
       <p>Coming? Email
 
-         <a href="mailto: yes@happybirthdaydude.lol? Subject = YES I AM COMING" >yes@happybirthdaydude.lol</a></p>
+         <a href="somethingbig.html" >yes@happybirthdaydude.lol</a></p>
 
     <section>
     <div class = "googlemap">
