Start a new project
for better understand how JS works with the html and css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </section>
       <p>Coming? Email
 
-         <a href="somethingbig.html" >yes@happybirthdaydude.lol</a></p>
+         <a href="newJsProject.html" > Explore Another Project</a></p>
 
     <section>
     <div class = "googlemap">
