--- a/newJsProject.html
+++ b/newJsProject.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title> maybe change the world I see.</title>
+  <title> a new project</title>
 </head>
 <body>
   <h1> I love code so much!</h1>
