--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class = "part1">
         <h2>Alexis's Birthday Party!</h2>
-
+        <p>much better</p>
         <aside class="right"><img src = "images/bubble-bottle.png">
         </aside>
 
