Updating background image

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 
 							<p class="lead light"><br></p>
                             <p class="lead light"></p>
-                            <h1 class="text-white">Hello<br> I'm Dino Zou</h1>
-                            <h2 class="text-white">您好！我是邹心志</h2>
-
+                            <h1 class="text-white" color="red">WELCOME<br> SUPER DINO'S WORLD</h1>
+                            
 						</div>
 					</div>
 				</div>
