--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 							<p class="lead light"><br></p>
                             <p class="lead light"></p>
-                            <h1 class="text-white" color="red">WELCOME<br> SUPER DINO'S WORLD</h1>
+                            <h1 class="text-white" color="red">WELCOME TO<br> SUPER DINO'S WORLD</h1>
                             
 						</div>
 					</div>
@@ -100,7 +100,7 @@
 							</div>
 							<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 								<div class="panel-body">
-									<p style="color:white"> My name is Dino Zou. I am a senior MIS student in Terry Collge of Business. I also have a minor in computer science. My main interest in the technology field is business data analysis, web development, artificial intelligence, virtual reality, and cyber-security intelligence. I did a lot of the projects in the most of the fileds. I am currently looking for a data analyst, business consultant, information management, or cyber security analyst job.</p>
+									<p style="color:white"> Dino started his career as a Technology Product Management Intern with a focus on Infor’s latest digital transformation platform - Infor OS. His main responsibility is to figure out how the team could implement machine learning and NLP into current product. Dino is also a new graduate with a major in Management Information System and Minor in Computer Science. Throughout the project-based learning experience, he is now very confident about his ability in software development, data analysis, product management and project management. He also focused on gaining the knowledge in Cyber Security and Artificial Intelligence..</p>
 								</div>
 							</div>
 						</div>
@@ -115,7 +115,7 @@
 							</div>
 							<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 								<div class="panel-body">
-                                    <P style="color:white"> With the rapid development of AI and Internet of Things, the future world will be a more data-driven society. People will heavily rely on the smart data tools for making their decisions. For example, in education, the student will depend on their personalized data to choose their major and career path. In healthcare, the patient will rely on the data to decide if they need to go the hospital for getting immediate treatment. A more intelligent world will come. The human civilization will move forward with a un-proceeding speed. Therefore, the organization should more focus on developing the intelligence product to satisfy the customer needs and make more growth in their current business.</P>
+                                    <P style="color:white"> With the rapid development of AI, people will start to live in a more intelligent world where machine can feel, understand, and do things for you. Big data will pernetrate into every industry for helping them making insightful decisions. More robotic machine will replace human labor and serve human. Augmented and virtual reality will also integrate into the normal human life.  </P>
 								</div>
 							</div>
 						</div>
@@ -130,7 +130,7 @@
 							</div>
 							<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 								<div class="panel-body">
-									<p style="color: white"> In my career path, I intend to do more job on the technology product development because, in that way, I could stand on a more general position to understand how to develop a successful product in the market. </p>
+									<p style="color: white"> Dino will graduate soon in August 2018. He is now actively looking for challenging opportunities such as Business/Data Analysit, IT/BI/Cyber Security Consultant </p>
 								</div>
 							</div>
 						</div>
@@ -154,7 +154,7 @@
 			<div class="row">
 				<div class="content col-xs-12 col-md-9">
 					<h2>Do You Like What You See Here?!</h2>
-					<p>I always look for the new techniques and technologies in that field. Get in touch with me Now.</p>
+					<p> Get in touch with me Now.</p>
 				</div>
 				<div class="btn-wrapper col-xs-12 col-md-3">
 					<a href="#contact" class="scroll-link btn btn-dark">Contact Me</a>
@@ -180,13 +180,13 @@
 				<!-- Service No. ( 1 ) -->
 				<div class="service col-md-4 col-sm-6 col-xs-12">
 					<i class="fa fa-bar-chart" aria-hidden="true"></i>
-					<h3>Business Process Management</h3>
+					<h3>Product Management</h3>
 					<p></p>
 				</div>
 				<!-- Service No. ( 2 ) -->
 				<div class="service col-md-4 col-sm-6 col-xs-12">
 					<i class="fa fa-code"></i>
-					<h3>Web Progamming</h3>
+					<h3>Software Development/h3>
 
 				</div>
 				<!-- Clearfix -->
@@ -202,7 +202,7 @@
 				<!-- Service No. ( 4 ) -->
 				<div class="service col-md-4 col-sm-6 col-xs-12">
 					<i class="fa fa-fire" aria-hidden="true"></i>
-					<h3>Cyber Security Intelligence</h3>
+					<h3>Cyber Security </h3>
 
 				</div>
 				<!-- Clearfix -->
@@ -210,7 +210,7 @@
 				<!-- Service No. ( 5 ) -->
 				<div class="service col-md-4 col-sm-6 col-xs-12">
 					<i class="fa fa-database" aria-hidden="true"></i>
-					<h3>Data Management and Analysis</h3>
+					<h3>Big Data and Analysis</h3>
 
 				</div>
 				<!-- Service No. ( 6 ) -->
