--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 				<!-- Service No. ( 2 ) -->
 				<div class="service col-md-4 col-sm-6 col-xs-12">
 					<i class="fa fa-code"></i>
-					<h3>Software Development/h3>
+					<h3>Software Development</h3>
 
 				</div>
 				<!-- Clearfix -->
