--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-site-verification" content="A6GOXn2F28LXrI_AuEKHObATpme_SIy6YABbqrgEh-Y" />
 	<!-- title -->
     <title>Get To Know Dino :)</title>
 	<meta name="author" content="Dino Zou" />
